# NLWeb

./: .gitignore  CONTRIBUTING.md  README.md  ruff.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
NLWebScorer/: pyproject.toml  requirements.txt  run_after_training.sh  run_rubric_gam_pipeline.sh  runpod_train.sh  thunder_train.sh
NLWebScorer/config/: training_config.yaml  training_config_bad_heavy.yaml  training_config_cuda.yaml  training_config_large.yaml  training_config_no_sites.yaml  training_config_rubric_gam.yaml
NLWebScorer/data/: analyze_noise.py  clean_data.py  generate_hard_negatives.py  generate_holdout.py  prepare_data.py  run_data_collection.sh
NLWebScorer/inference/: scorer.py  server.py
NLWebScorer/models/: modernbert_scorer.py  neural_gam.py  rubric_gam.py
NLWebScorer/runpod/: Dockerfile  run_finetune.sh  setup.sh  upload_data.sh
NLWebScorer/training/: diagnose_errors.py  evaluate.py  fit_rubric_weights.py  loss_utils.py  train_gam.py  train_modernbert.py  train_rubric_gam.py
config/: config_nlweb.yaml
docs/: life-of-a-chat-query.md  nlweb-chatgpt-integration.md  nlweb-check-connectivity.md  nlweb-cli.md  nlweb-hello-world.md  nlweb-retrieval.md  nlweb-systemmap.md  setup-azure.md  setup-cloudflare-autorag.md  setup-elasticsearch.md  setup-snowflake.md  training-recipe-modernbert-gam.md
openai-apps-sdk-integration/: dev-all.mts  package.json  pnpm-lock.yaml
static/: a2a_test.html  chat-interface-unified.js  chat-page-styles.css  chat-ui-common.js  index2.html  join.html  json-renderer.js  mcp_test.html
(+40 files in other folders)
